# ReplyRadar

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
config/: default.yaml
docs/: README.md  architecture.md  cjm.md  data-invariants.md  evals.md  glossary.md  ingestion.md  lmstudio-setup.md  manual-ops.md  observability.md  plan.md  review.md  structure.md
docs/adr/: 0001-local-first-single-user-scope.md  0002-postgresql-source-of-truth.md  0003-single-process-runtime-for-mvp.md  0004-local-llm-via-lm-studio-and-litellm.md  0005-use-case-api-and-operator-invoked-digest.md  0006-entity-knowledge-graph.md  0007-entity-confidence-scoring.md  0008-asyncpg-raw-sql.md  0009-orphan-entity-activation-model.md  0010-tactical-ddd-in-knowledge-domain.md  0011-error-taxonomy-and-quarantine.md  0012-audit-trail-and-optimistic-locking.md  0013-command-query-separation.md  0014-policy-as-code.md  0015-import-boundaries.md  0016-static-analysis-toolchain.md  0017-telegram-export-import-as-mtproto-fallback.md  0018-absolute-imports.md  0019-logging-strategy.md  README.md
evals/: README.md
evals/datasets/classify/: examples.jsonl
evals/datasets/extract/: examples.jsonl
memory/: MEMORY.md  project_stage1_done.md  project_stage3_done.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial_schema.py  0002_quarantine_index.py
src/replyradar/: __main__.py  bootstrap.py  config.py  logging.py  main.py
src/replyradar/api/: app.py  deps.py
src/replyradar/api/routes/: admin.py  chats.py  imports.py  status.py
src/replyradar/db/: pool.py
src/replyradar/db/repos/: chats.py  messages.py  quarantine.py  signals.py
src/replyradar/eval/: baseline.py  classify.py  extract.py  metrics.py
src/replyradar/ingestion/: backfill.py  listener.py  tg_export_parser.py
src/replyradar/llm/: client.py
src/replyradar/llm/contracts/: classify.py  extract.py
src/replyradar/llm/prompts/: classify.py  extract.py
src/replyradar/processing/: classify.py  embed.py  engine.py  extract.py
src/replyradar/usecases/: chats.py  imports.py  quarantine.py
tests/: test_import_boundaries.py
tests/ingestion/: test_tg_export_parser.py
tests/integration/: conftest.py  test_llm_live.py
tests/llm/: test_llm_client.py
tests/processing/: test_classify_batch.py
