[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/replyradar"]

[project]
name = "replyradar"
version = "0.1.0"
description = "Single-user local-first Telegram navigation tool"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "asyncpg>=0.30.0",
    "alembic>=1.16.0",
    "sqlalchemy[asyncio]>=2.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0",
    "telethon>=1.36.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pyright>=1.1.0",
    "pylint>=3.0.0",
    "bandit>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "import-linter>=2.1.0",
    "asyncpg-stubs>=0.31.0",
    "types-PyYAML>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.13"
strict = false
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["replyradar.knowledge.*", "replyradar.db.repos.*"]
strict = true

[[tool.mypy.overrides]]
module = ["asyncpg.*", "telethon.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B101"]

[tool.pylint.main]
source-roots = ["src"]

[tool.pylint.messages_control]
# Отключаем то, что покрывает ruff или противоречит проекту
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "fixme",
]

[tool.pylint.format]
max-line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
